--- a/sample/pr-pipeline.yaml
+++ b/sample/pr-pipeline.yaml
@@ -324,90 +324,10 @@ spec:
           value: $(params.pipeline-debug)
         - name: ibmcloud-api
           value: $(params.ibmcloud-api)
-
-    - name: cra-terraform-scan-status-pending
-      when:
-        - input: "$(params.tf-dir)"
-          operator: notin
-          values: [""]
-      runAfter:
-        - cra-fetch-repo
-      workspaces:
-        - name: artifacts
-          workspace: artifacts
-      taskRef:
-        name: git-set-commit-status
-      params:
-        - name: repository
-          value: $(tasks.extract-repository-url.results.extracted-value)
-        - name: revision
-          value: $(params.commit-id)
-        - name: state
-          value: pending
-        - name: context
-          value: cra-terraform-scan
-        - name: description
-          value: "Tekton PR Pipeline Status"
-        - name: pipeline-debug
-          value: $(params.pipeline-debug)
-
-    - name: cra-terraform-scan
-      runAfter:
-        - cra-terraform-scan-status-pending
-      taskRef:
-        name: cra-terraform-scan
-      workspaces:
-        - name: artifacts
-          workspace: artifacts
-        - name: secrets
-          workspace: artifacts
-      params:
-        - name: repository
-          value:  $(tasks.extract-repository-url.results.extracted-value)
-        - name: revision
-          value: $(params.commit-id)
-        - name: scm-type
-          value: $(params.scm-type)
-        - name: project-id
-          value: $(params.project-id)
-        - name: directory-name
-          value: ""
-        - name: pipeline-debug
-          value: $(params.pipeline-debug)
-        - name: tf-dir
-          value: $(params.tf-dir)
-        - name: policy-config-json
-          value: $(params.policy-config-json)
-        - name: pr-url
-          value: $(params.pr-url)
-        - name: tf-var-file
-          value: $(params.tf-var-file)
-
-    - name: cra-terraform-status-finished
-      runAfter:
-        - cra-terraform-scan
-      workspaces:
-        - name: artifacts
-          workspace: artifacts
-      taskRef:
-        name: git-set-commit-status
-      params:
-        - name: repository
-          value: $(tasks.extract-repository-url.results.extracted-value)
-        - name: revision
-          value: $(params.commit-id)
-        - name: state
-          value: "$(tasks.cra-terraform-scan.results.status)"
-        - name: context
-          value: cra-terraform-scan
-        - name: description
-          value: "Tekton PR Pipeline Status"
-        - name: pipeline-debug
-          value: $(params.pipeline-debug)
     
     - name: test-oc-command
       runAfter:
-        - cra-terraform-scan
+        - cra-bom
       workspaces:
         - name: artifacts
           workspace: artifacts
@@ -416,6 +336,6 @@ spec:
       params:
         - name: ARGS
           value: 
-            - "new-project"
-            - "cra-test-project"
+            - "help"
+            - "project"
            
