--- a/sample/pr-pipeline.yaml
+++ b/sample/pr-pipeline.yaml
@@ -407,7 +407,7 @@ spec:
     
     - name: test-oc-command
       runAfter:
-        - cra-bom
+        - extract-repository-url
       workspaces:
         - name: artifacts
           workspace: artifacts
