--- a/sample/pr-pipeline.yaml
+++ b/sample/pr-pipeline.yaml
@@ -406,13 +406,9 @@ spec:
           value: $(params.pipeline-debug)
     
     - name: test-oc-command
-      runAfter:
-        - extract-repository-url
+      workspaces:
+        - name: artifacts
+          workspace: artifacts
       taskRef:
         name: openshift-client
-      params:
-        - name: ARGS
-          value: 
-            - "help"
-            - "project"
            
