--- a/pipeline/pr-pipeline.yaml
+++ b/pipeline/pr-pipeline.yaml
@@ -10,5 +10,5 @@ spec:
         name: openshift-client
       params:
         - name: ARGS
-          value: ["version"]
+          value: ["help", "project"]
            
