--- a/app-pipeline/deployments/ui.yaml
+++ b/app-pipeline/deployments/ui.yaml
@@ -29,7 +29,7 @@ spec:
         app: mobile-simulator
     spec:
       containers:
-        - image: ykoyfman/mobile-simulator:example-bank-1.0
+        - image: ykoyfman/mobile-simulator:css-fix
           imagePullPolicy: Always
           name: mobile-simulator
           envFrom:
