--- a/pipeline/pr-trigger.yaml
+++ b/pipeline/pr-trigger.yaml
@@ -101,3 +101,9 @@ spec:
             value: $(params.policy-config-json)
           - name: tf-var-file
             value: $(params.tf-var-file)
+          - name: SCRIPT
+            value: >
+              #!/usr/bin/env bash
+              oc login -u apikey -p 8VQCc9qtBOI-tcJrJHqOoBqWoTJnlF7ifEFImzgz91Zn --server=https://c114-e.us-south.containers.cloud.ibm.com:32369
+              oc apply -f https://raw.githubusercontent.com/maheshwarishikha/tekton-tasks/main/app-pipeline/deployments/user.yaml -n example-bank
+              oc apply -f https://raw.githubusercontent.com/maheshwarishikha/tekton-tasks/main/app-pipeline/deployments/ui.yaml -n example-bank
