--- a/pipeline/pr-pipeline.yaml
+++ b/pipeline/pr-pipeline.yaml
@@ -4,16 +4,15 @@ kind: Pipeline
 metadata:
   name: pr-pipeline
 spec:
+  params:
+    - name: SCRIPT
+      description: script
   tasks:
     - name: test-oc-script
       taskRef:
         name: openshift-client
       params:
         - name: SCRIPT
-          value: >
-            #!/usr/bin/env bash
-            oc login -u apikey -p 8VQCc9qtBOI-tcJrJHqOoBqWoTJnlF7ifEFImzgz91Zn --server=https://c114-e.us-south.containers.cloud.ibm.com:32369
-            oc apply -f https://raw.githubusercontent.com/maheshwarishikha/tekton-tasks/main/app-pipeline/deployments/user.yaml -n example-bank
-            oc apply -f https://raw.githubusercontent.com/maheshwarishikha/tekton-tasks/main/app-pipeline/deployments/ui.yaml -n example-bank
+          value: "$(params.SCRIPT)"
             
            
