--- a/test-git-clone/pr-pipeline.yaml
+++ b/test-git-clone/pr-pipeline.yaml
@@ -16,3 +16,6 @@ spec:
       params:
         - name: url
           value: $(params.git-url)
+      workspaces:
+        - name: output
+          workspace: artifacts
