--- a/test-git-clone-buildah/pr-trigger.yaml
+++ b/test-git-clone-buildah/pr-trigger.yaml
@@ -96,4 +96,4 @@ spec:
           - name: IMAGE
             value: us.icr.io/islcodepatterns/test-image-from-pipeline
           - name: directory
-            value: /artifacts/output
+            value: /
