--- a/test-git-clone-buildah/list-code-task.yaml
+++ b/test-git-clone-buildah/list-code-task.yaml
@@ -19,6 +19,7 @@ spec:
   steps:
     - name: list-src
       image: alpine
+      workingDir: $(workspaces.source.path)
       command:
         - "ls"
       args: 
