--- a/test-git-clone-buildah/buildah-task.yaml
+++ b/test-git-clone-buildah/buildah-task.yaml
@@ -75,7 +75,8 @@ spec:
       [[ "$(workspaces.sslcertdir.bound)" == "true" ]] && CERT_DIR_FLAG="--cert-dir $(workspaces.sslcertdir.path)"
       buildah ${CERT_DIR_FLAG} --storage-driver=$(params.STORAGE_DRIVER) push \
         $(params.PUSH_EXTRA_ARGS) --tls-verify=$(params.TLSVERIFY) \
-        --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE)
+        --digestfile $(workspaces.source.path)/image-digest $(params.IMAGE) \
+        docker://$(params.IMAGE)
     volumeMounts:
     - name: varlibcontainers
       mountPath: /var/lib/containers
