--- a/test-git-clone-buildah/pr-trigger.yaml
+++ b/test-git-clone-buildah/pr-trigger.yaml
@@ -96,4 +96,4 @@ spec:
           - name: IMAGE
             value: maheshwarishikha/sample-image
           - name: directory
-            value: /
+            value: /workspace
