--- a/test-git-clone-buildah/pr-trigger.yaml
+++ b/test-git-clone-buildah/pr-trigger.yaml
@@ -94,6 +94,6 @@ spec:
           - name: DOCKERFILE
             value: ./Dockerfile
           - name: IMAGE
-            value: maheshwarishikha/sample-image
+            value: docker.io/maheshwarishikha/sample-image
           - name: directory
-            value: /workspace
+            value: /workspace/response
