--- a/services-deployment.yaml
+++ b/services-deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: transaction-service
-        image: ykoyfman/bank-transaction-service:1.0
+        image: maheshwarishikha/eb-tr-image:latest
         imagePullPolicy: Always
         ports:
         - name: http-server
@@ -57,108 +57,3 @@ spec:
   to:
     kind: Service
     name: transaction-service
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: user-service
-  labels:
-    app: user-service
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: user-service
-  template:
-    metadata:
-      labels:
-        app: user-service
-    spec:
-      containers:
-      - name: user-service
-        image: anthonyamanse/user-service:example-bank-1.0
-        imagePullPolicy: Always
-        ports:
-        - name: http-server
-          containerPort: 9080
-        envFrom:
-        - secretRef:
-            name: bank-db-secret
-        - secretRef:
-            name: bank-oidc-secret
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: user-service
-  labels:
-    app: user-service
-spec:
-  ports:
-  - port: 9080
-    targetPort: 9080
-  selector:
-    app: user-service
----
-apiVersion: v1
-kind: Route
-metadata:
-  name: user-service
-spec:
-  to:
-    kind: Service
-    name: user-service
----
-  apiVersion: v1
-  kind: Service
-  metadata:
-    name: mobile-simulator-service
-    labels:
-      app: mobile-simulator
-  spec:
-    ports:
-      - port: 80
-        protocol: TCP
-        targetPort: 8080
-    type: LoadBalancer
-    selector:
-      app: mobile-simulator
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: mobile-simulator-deployment
-  labels:
-    app: mobile-simulator
-spec:
-  selector:
-    matchLabels:
-      app: mobile-simulator
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      labels:
-        app: mobile-simulator
-    spec:
-      containers:
-        - image: ykoyfman/mobile-simulator:css-fix
-          imagePullPolicy: Always
-          name: mobile-simulator
-          envFrom:
-            - secretRef:
-                name: mobile-simulator-secrets
-          env:
-            - name: PORT
-              value: '8080'
-          ports:
-            - containerPort: 8080
----
-apiVersion: v1
-kind: Route
-metadata:
-  name: mobile-simulator-service
-spec:
-  to:
-    kind: Service
-    name: mobile-simulator-service
