--- a/fss-cp-pipeline/pr-pipeline.yaml
+++ b/fss-cp-pipeline/pr-pipeline.yaml
@@ -6,10 +6,11 @@ metadata:
 spec:
   params:
     - name: repository
-    - name: branch
+    - name: revision
     - name: directory
     - name: DOCKERFILE
       description: Path to CONTEXT
+    - name: CONTEXT
     - name: IMAGE
       description: image ocation to be pushed
     - name: apikey
@@ -50,6 +51,8 @@ spec:
       params:
         - name: DOCKERFILE
           value: $(params.DOCKERFILE)
+        - name: CONTEXT
+          value: $(params.CONTEXT)
         - name: IMAGE
           value: $(params.IMAGE)
       workspaces:
