--- a/fss-cp-pipeline/pr-pipeline.yaml
+++ b/fss-cp-pipeline/pr-pipeline.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   params:
     - name: repository
-    - name: revision
+    - name: branch
     - name: directory
     - name: DOCKERFILE
       description: Path to CONTEXT
