--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -72,7 +72,7 @@ spec:
         - name: path-to-dockerfile
           value: $(params.path-to-dockerfile)
         - name: additional-tags
-          value: latest,1.0.0-$(tasks.pipeline-1-clone-task.results.git-branch)-$(tasks.pipeline-1-clone-task.results.git-commit)
+          value: latest,1.0.0-$(tasks.git-clone-task.results.git-branch)-$(tasks.git-clone-task.results.git-commit)
         - name: additional-tags-script
           value: |
             # The script is providing tag(s) as output
