--- a/open-toolchain-extender/pr-trigger.yaml
+++ b/open-toolchain-extender/pr-trigger.yaml
@@ -74,7 +74,7 @@ spec:
           - name: repository
             value: $(params.repository)
           - name: branch
-            value: $(params.branch)
+            value: main
           - name: registry-region
             value: $(params.registry-region)
           - name: registry-namespace
@@ -82,7 +82,7 @@ spec:
           - name: image-name
             value: $(params.image-name)
           - name: path-to-dockerfile
-            value: bank-app-backend/transaction-service/
+            value: output/bank-app-backend/transaction-service/
             # value: $(params.path-to-dockerfile)
           # - name: target-branch
           #   value: $(params.target-branch)
