--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -22,6 +22,8 @@ spec:
       default: "."
     - name: pipeline-debug
       default: "0"
+    - name: directory
+      default: "."
   workspaces:
     - name: pipeline-ws
   
