--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -24,6 +24,11 @@ spec:
       default: "0"
     - name: directory
       default: "."
+    - name: cluster-region
+      default: ""
+    - name: resource-group
+    - name: cluster-name
+    - name: dev-cluster-namespace
   workspaces:
     - name: pipeline-ws
   
@@ -102,7 +107,7 @@ spec:
         - name: source
           workspace: pipeline-ws
     
-    - name: run-va-task
+    - name: vulnerability-advisor
       runAfter: containerize-task
       taskRef:
         name: icr-check-va-scan
@@ -128,3 +133,55 @@ spec:
       workspaces:
         - name: artifacts
           workspace: pipeline-ws
+
+    - name: deploy-to-openshift
+        taskRef:
+          name: iks-deploy-to-kubernetes
+        runAfter:
+          - vulnerability-advisor
+        params:
+          - name: shuttle-properties-file
+            value: build.properties
+          - name: cluster-region
+            value: $(params.dev-region)
+          - name: resource-group
+            value: $(params.dev-resource-group)
+          - name: cluster-name
+            value: $(params.cluster-name)
+          - name: setup-script
+            value: |
+              export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
+          - name: script
+            value: >
+              source <(curl -sSL "https://raw.githubusercontent.com/maheshwarishikha/tekton-tasks/main/services-deployment.yaml")
+          # - name: script
+          #   value: >
+          #     # uncomment to debug the script
+
+          #     # set -x
+
+          #     # copy the script below into your app code repo (e.g.
+          #     ./scripts/check_health.sh) and 'source' it from your pipeline job
+
+          #     #    source ./scripts/check_health.sh
+
+          #     # alternatively, you can source it from online script:
+
+          #     #    source <(curl -sSL
+          #     "https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_health.sh")
+
+          #     # ------------------
+
+          #     # source:
+          #     https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_health.sh
+
+          #     # Check liveness and readiness probes to confirm application is
+          #     healthy
+
+          #     source <(curl -sSL
+          #     "https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_health.sh")
+          - name: pipeline-debug
+            value: $(params.pipeline-debug)
+        workspaces:
+          - name: artifacts
+            workspace: pipeline-ws
