--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -138,7 +138,7 @@ spec:
       taskRef:
         name: iks-deploy-to-kubernetes
       runAfter:
-        - vulnerability-advisor
+        - containerize-task
       params:
         - name: shuttle-properties-file
           value: build.properties
