--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -32,6 +32,9 @@ spec:
     - name: deployment-file
       description: file containing the kubernetes deployment definition
       default: deployment.yml
+    - name: transaction-service-image-name
+    - name: user-service-image-name
+    - name: simulator-service-image-name
   workspaces:
     - name: pipeline-ws
   
@@ -74,7 +77,7 @@ spec:
         - name: response
           workspace: pipeline-ws
 
-    - name: containerize-task
+    - name: containerize-transaction-service
       runAfter: list-code
       taskRef:
         name: icr-containerize
@@ -88,7 +91,7 @@ spec:
         - name: registry-namespace
           value: $(params.registry-namespace)
         - name: image-name
-          value: $(params.image-name)
+          value: $(params.transaction-service-image-name)
         - name: path-to-context
           value: $(params.path-to-dockerfile)
         - name: path-to-dockerfile
@@ -138,13 +141,13 @@ spec:
         - name: source
           workspace: pipeline-ws
     
-    - name: vulnerability-advisor
-      runAfter: containerize-task
+    - name: vulnerability-advisor-transaction-service
+      runAfter: containerize-transaction-service
       taskRef:
         name: icr-check-va-scan
       params:
         - name: scan-report-file
-          value: "app-image-va-report.json"
+          value: "transaction-service-image-va-report.json"
         # - name: max-iteration
         #   value: '5'
         # - name: sleep-time
@@ -156,9 +159,191 @@ spec:
         - name: container-registry-apikey-secret-key
           value: "apikey"
         - name: image-url
-          value: $(tasks.containerize-task.results.image-repository)
+          value: $(tasks.containerize-transaction-service.results.image-repository)
         - name: image-digest
-          value: $(tasks.containerize-task.results.image-digest)
+          value: $(tasks.containerize-transaction-service.results.image-digest)
+        - name: pipeline-debug
+          value: $(params.pipeline-debug)
+      workspaces:
+        - name: artifacts
+          workspace: pipeline-ws
+
+    - name: containerize-user-service
+      runAfter: containerize-transaction-service
+      taskRef:
+        name: icr-containerize
+      params:
+        - name: continuous-delivery-context-secret
+          value: "secure-properties"
+        - name: container-registry-apikey-secret-key
+          value: "apikey"
+        - name: registry-region
+          value: $(params.registry-region)
+        - name: registry-namespace
+          value: $(params.registry-namespace)
+        - name: image-name
+          value: $(params.user-service-image-name)
+        - name: path-to-context
+          value: $(params.path-to-dockerfile)
+        - name: path-to-dockerfile
+          value: $(params.path-to-dockerfile)
+        # - name: additional-tags
+        #   value: latest,1.0.0-$(tasks.git-clone-task.results.git-branch)-$(tasks.git-clone-task.results.git-commit)
+        - name: additional-tags-script
+          value: >
+              # Minting image tag using format:
+              BUILD_NUMBER-BRANCH-COMMIT_ID-TIMESTAMP
+
+              # e.g. 3-master-50da6912-20181123114435
+
+              # (use build number as first segment to allow image tag as a patch
+              release name according to semantic versioning)
+
+              GIT_BRANCH="$(tasks.git-clone-task.results.git-branch)"
+
+              GIT_COMMIT="$(tasks.git-clone-task.results.git-commit)"
+
+              TIMESTAMP=$( date -u "+%Y%m%d%H%M%S")
+
+              IMAGE_TAG=${TIMESTAMP}
+
+              if [ ! -z "${GIT_COMMIT}" ]; then
+                GIT_COMMIT_SHORT=$( echo ${GIT_COMMIT} | head -c 8 )
+                IMAGE_TAG=${GIT_COMMIT_SHORT}-${IMAGE_TAG}
+              fi
+
+              if [ ! -z "${GIT_BRANCH}" ]; then
+              IMAGE_TAG=${GIT_BRANCH}-${IMAGE_TAG} ; fi
+
+              IMAGE_TAG=${BUILD_NUMBER}-${IMAGE_TAG}
+
+              echo "$IMAGE_TAG"
+          # value: |
+          #   # The script is providing tag(s) as output
+          #   # But logs can be written as error stderr
+          #   echo "Providing an image tag with build number" >&2
+          #   # Add a specific tag with cd build number
+          #   echo "1.0.0-${BUILD_NUMBER}"
+        # - name: properties-file
+        #   value: ""
+        - name: pipeline-debug
+          value: $(params.pipeline-debug)
+      workspaces:
+        - name: source
+          workspace: pipeline-ws
+    
+    - name: vulnerability-advisor-user-service
+      runAfter: containerize-user-service
+      taskRef:
+        name: icr-check-va-scan
+      params:
+        - name: scan-report-file
+          value: "user-service-image-va-report.json"
+        # - name: max-iteration
+        #   value: '5'
+        # - name: sleep-time
+        #   value: '3'
+        # - name: fail-on-scanned-issues
+        #   value: 'false'
+        - name: continuous-delivery-context-secret
+          value: "secure-properties"
+        - name: container-registry-apikey-secret-key
+          value: "apikey"
+        - name: image-url
+          value: $(tasks.containerize-user-service.results.image-repository)
+        - name: image-digest
+          value: $(tasks.containerize-user-service.results.image-digest)
+        - name: pipeline-debug
+          value: $(params.pipeline-debug)
+      workspaces:
+        - name: artifacts
+          workspace: pipeline-ws
+
+    - name: containerize-simulator-service
+      runAfter: containerize-user-service
+      taskRef:
+        name: icr-containerize
+      params:
+        - name: continuous-delivery-context-secret
+          value: "secure-properties"
+        - name: container-registry-apikey-secret-key
+          value: "apikey"
+        - name: registry-region
+          value: $(params.registry-region)
+        - name: registry-namespace
+          value: $(params.registry-namespace)
+        - name: image-name
+          value: $(params.simulator-service-image-name)
+        - name: path-to-context
+          value: $(params.path-to-dockerfile)
+        - name: path-to-dockerfile
+          value: $(params.path-to-dockerfile)
+        # - name: additional-tags
+        #   value: latest,1.0.0-$(tasks.git-clone-task.results.git-branch)-$(tasks.git-clone-task.results.git-commit)
+        - name: additional-tags-script
+          value: >
+              # Minting image tag using format:
+              BUILD_NUMBER-BRANCH-COMMIT_ID-TIMESTAMP
+
+              # e.g. 3-master-50da6912-20181123114435
+
+              # (use build number as first segment to allow image tag as a patch
+              release name according to semantic versioning)
+
+              GIT_BRANCH="$(tasks.git-clone-task.results.git-branch)"
+
+              GIT_COMMIT="$(tasks.git-clone-task.results.git-commit)"
+
+              TIMESTAMP=$( date -u "+%Y%m%d%H%M%S")
+
+              IMAGE_TAG=${TIMESTAMP}
+
+              if [ ! -z "${GIT_COMMIT}" ]; then
+                GIT_COMMIT_SHORT=$( echo ${GIT_COMMIT} | head -c 8 )
+                IMAGE_TAG=${GIT_COMMIT_SHORT}-${IMAGE_TAG}
+              fi
+
+              if [ ! -z "${GIT_BRANCH}" ]; then
+              IMAGE_TAG=${GIT_BRANCH}-${IMAGE_TAG} ; fi
+
+              IMAGE_TAG=${BUILD_NUMBER}-${IMAGE_TAG}
+
+              echo "$IMAGE_TAG"
+          # value: |
+          #   # The script is providing tag(s) as output
+          #   # But logs can be written as error stderr
+          #   echo "Providing an image tag with build number" >&2
+          #   # Add a specific tag with cd build number
+          #   echo "1.0.0-${BUILD_NUMBER}"
+        # - name: properties-file
+        #   value: ""
+        - name: pipeline-debug
+          value: $(params.pipeline-debug)
+      workspaces:
+        - name: source
+          workspace: pipeline-ws
+    
+    - name: vulnerability-advisor-simulator-service
+      runAfter: containerize-simulator-service
+      taskRef:
+        name: icr-check-va-scan
+      params:
+        - name: scan-report-file
+          value: "simulator-service-image-va-report.json"
+        # - name: max-iteration
+        #   value: '5'
+        # - name: sleep-time
+        #   value: '3'
+        # - name: fail-on-scanned-issues
+        #   value: 'false'
+        - name: continuous-delivery-context-secret
+          value: "secure-properties"
+        - name: container-registry-apikey-secret-key
+          value: "apikey"
+        - name: image-url
+          value: $(tasks.containerize-simulator-service.results.image-repository)
+        - name: image-digest
+          value: $(tasks.containerize-simulator-service.results.image-digest)
         - name: pipeline-debug
           value: $(params.pipeline-debug)
       workspaces:
@@ -169,7 +354,7 @@ spec:
       taskRef:
         name: iks-deploy-to-kubernetes
       runAfter:
-        - containerize-task
+        - containerize-simulator-service
       params:
         - name: shuttle-properties-file
           value: build.properties
