--- a/services-deployment.yaml
+++ b/services-deployment.yaml
@@ -142,7 +142,7 @@ spec:
         app: mobile-simulator
     spec:
       containers:
-        - image: us.icr.io/islcodepatterns/cp-simulator-service
+        - image: ykoyfman/mobile-simulator:css-fix
           imagePullPolicy: Always
           name: mobile-simulator
           envFrom:
