--- a/open-toolchain-extender/pr-trigger.yaml
+++ b/open-toolchain-extender/pr-trigger.yaml
@@ -145,3 +145,7 @@ spec:
             value: $(params.dev-cluster-namespace)
           - name: deployment-file
             value: deployment.yaml
+          - name: path-to-transaction-svc-deployment
+            value: bank-app-backend/transaction-service/
+          - name: path-to-user-svc-deployment
+            value: bank-app-backend/user-service/
