--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -35,6 +35,8 @@ spec:
     - name: transaction-service-image-name
     - name: user-service-image-name
     - name: simulator-service-image-name
+    - name: path-to-transaction-svc-deployment
+    - name: path-to-user-svc-deployment
   workspaces:
     - name: pipeline-ws
   
@@ -78,7 +80,8 @@ spec:
           workspace: pipeline-ws
 
     - name: containerize-transaction-service
-      runAfter: list-code
+      runAfter: 
+        - list-code
       taskRef:
         name: icr-containerize
       params:
@@ -142,7 +145,8 @@ spec:
           workspace: pipeline-ws
     
     - name: vulnerability-advisor-transaction-service
-      runAfter: containerize-transaction-service
+      runAfter: 
+        - containerize-transaction-service
       taskRef:
         name: icr-check-va-scan
       params:
@@ -168,8 +172,47 @@ spec:
         - name: artifacts
           workspace: pipeline-ws
 
+    - name: transaction-service-deploy
+      taskRef:
+        name: iks-deploy-to-kubernetes
+      runAfter:
+        - containerize-transaction-service
+      params:
+        - name: shuttle-properties-file
+          value: build.properties
+        - name: cluster-region
+          value: $(params.cluster-region)
+        - name: resource-group
+          value: $(params.resource-group)
+        - name: cluster-name
+          value: $(params.cluster-name)
+        - name: setup-script
+          value: |
+            export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
+            export PATH_TO_DEPLOYMENT="$(params.path-to-transaction-svc-deployment)"
+            export DEPLOYMENT_FILE="$PATH_TO_DEPLOYMENT/$(params.deployment-file)"
+            # pipeline build number is the doi build record id (if any)
+            export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
+            echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
+            # For doi plugin invocation if needed
+            export TOOLCHAIN_ID=$PIPELINE_TOOLCHAIN_ID
+            # Single tag for the image built
+            export IMAGE_TAG=$IMAGE_TAGS
+            # Keep it in build.properties shuttle file
+            echo "IMAGE_TAG=$IMAGE_TAGS" >> build.properties
+        - name: script
+          value: >
+            source <(curl -sSL
+            "https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_and_deploy_kubectl.sh")
+        - name: pipeline-debug
+          value: $(params.pipeline-debug)
+      workspaces:
+        - name: artifacts
+          workspace: pipeline-ws
+    
     - name: containerize-user-service
-      runAfter: vulnerability-advisor-transaction-service
+      runAfter: 
+        - transaction-service-deploy
       taskRef:
         name: icr-containerize
       params:
@@ -233,7 +276,8 @@ spec:
           workspace: pipeline-ws
     
     - name: vulnerability-advisor-user-service
-      runAfter: containerize-user-service
+      runAfter: 
+        - containerize-user-service
       taskRef:
         name: icr-check-va-scan
       params:
@@ -259,8 +303,47 @@ spec:
         - name: artifacts
           workspace: pipeline-ws
 
+    - name: user-service-deploy
+      taskRef:
+        name: iks-deploy-to-kubernetes
+      runAfter:
+        - containerize-user-service
+      params:
+        - name: shuttle-properties-file
+          value: build.properties
+        - name: cluster-region
+          value: $(params.cluster-region)
+        - name: resource-group
+          value: $(params.resource-group)
+        - name: cluster-name
+          value: $(params.cluster-name)
+        - name: setup-script
+          value: |
+            export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
+            export PATH_TO_DEPLOYMENT="$(params.path-to-user-svc-deployment)"
+            export DEPLOYMENT_FILE="$PATH_TO_DEPLOYMENT/$(params.deployment-file)"
+            # pipeline build number is the doi build record id (if any)
+            export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
+            echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
+            # For doi plugin invocation if needed
+            export TOOLCHAIN_ID=$PIPELINE_TOOLCHAIN_ID
+            # Single tag for the image built
+            export IMAGE_TAG=$IMAGE_TAGS
+            # Keep it in build.properties shuttle file
+            echo "IMAGE_TAG=$IMAGE_TAGS" >> build.properties
+        - name: script
+          value: >
+            source <(curl -sSL
+            "https://raw.githubusercontent.com/open-toolchain/commons/master/scripts/check_and_deploy_kubectl.sh")
+        - name: pipeline-debug
+          value: $(params.pipeline-debug)
+      workspaces:
+        - name: artifacts
+          workspace: pipeline-ws
+
     - name: containerize-simulator-service
-      runAfter: vulnerability-advisor-user-service
+      runAfter: 
+        - user-service-deploy
       taskRef:
         name: icr-containerize
       params:
@@ -350,7 +433,7 @@ spec:
         - name: artifacts
           workspace: pipeline-ws
 
-    - name: deploy-to-openshift
+    - name: simulator-service-deploy
       taskRef:
         name: iks-deploy-to-kubernetes
       runAfter:
