--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -191,6 +191,7 @@ spec:
             export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
             export PATH_TO_DEPLOYMENT="$(params.path-to-transaction-svc-deployment)"
             export DEPLOYMENT_FILE="$PATH_TO_DEPLOYMENT/$(params.deployment-file)"
+            export IMAGE_NAME=$(tasks.containerize-transaction-service.results.image-repository)
             # pipeline build number is the doi build record id (if any)
             export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
             echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
@@ -322,6 +323,7 @@ spec:
             export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
             export PATH_TO_DEPLOYMENT="$(params.path-to-user-svc-deployment)"
             export DEPLOYMENT_FILE="$PATH_TO_DEPLOYMENT/$(params.deployment-file)"
+            export IMAGE_NAME=$(tasks.containerize-user-service.results.image-repository)
             # pipeline build number is the doi build record id (if any)
             export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
             echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
@@ -451,6 +453,7 @@ spec:
           value: |
             export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
             export DEPLOYMENT_FILE="$(params.deployment-file)"
+            export IMAGE_NAME=$(tasks.containerize-simulator-service.results.image-repository)
             # pipeline build number is the doi build record id (if any)
             export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
             echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
