--- a/open-toolchain-extender/cd-pipeline.yaml
+++ b/open-toolchain-extender/cd-pipeline.yaml
@@ -192,6 +192,7 @@ spec:
             export PATH_TO_DEPLOYMENT="$(params.path-to-transaction-svc-deployment)"
             export DEPLOYMENT_FILE="$PATH_TO_DEPLOYMENT/$(params.deployment-file)"
             export IMAGE_NAME=`echo $(tasks.containerize-transaction-service.results.image-repository)| awk -F'/' '{print $3}'`
+            export IMAGE_TAG=$(tasks.containerize-transaction-service.results.image-tags)
             # pipeline build number is the doi build record id (if any)
             export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
             echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
@@ -324,6 +325,7 @@ spec:
             export PATH_TO_DEPLOYMENT="$(params.path-to-user-svc-deployment)"
             export DEPLOYMENT_FILE="$PATH_TO_DEPLOYMENT/$(params.deployment-file)"
             export IMAGE_NAME=`echo $(tasks.containerize-user-service.results.image-repository)| awk -F'/' '{print $3}'`
+            export IMAGE_TAG=$(tasks.containerize-user-service.results.image-tags)
             # pipeline build number is the doi build record id (if any)
             export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
             echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
@@ -454,6 +456,7 @@ spec:
             export CLUSTER_NAMESPACE="$(params.dev-cluster-namespace)"
             export DEPLOYMENT_FILE="$(params.deployment-file)"
             export IMAGE_NAME=`echo $(tasks.containerize-simulator-service.results.image-repository)| awk -F'/' '{print $3}'`
+            export IMAGE_TAG=$(tasks.containerize-simulator-service.results.image-tags)
             # pipeline build number is the doi build record id (if any)
             export SOURCE_BUILD_NUMBER=$BUILD_NUMBER
             echo "SOURCE_BUILD_NUMBER=$BUILD_NUMBER" >> build.properties
